Css file style created

--- a/projecto_1/index.html
+++ b/projecto_1/index.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Bienes raices NMG</title>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <header>
-      <a href="nosotros.html"><!-- logo with link -->
-        <img src="img/logo.svg" alt="logotipo br">
-      </a>
-      <nav>
-       <a href="nosotros.html"> Nosotros</a>
-       <a href="anuncios.html"> Anuncios</a>
-       <a href="blog.html"> Blog</a>
-       <a href="contacto.html"> Contacto</a>
-     </nav>
-     <h1>venta de casas y departamentos exclusivos de lujo</h1>
+    <header class="site-header inicio">
+      <div class="contenedor">
+        <div class="barra">
+          <a href="nosotros.html"><!-- logo with link -->
+            <img src="img/logo.svg" alt="logotipo br">
+          </a>
+          <nav class="navegacion">
+           <a href="nosotros.html"> Nosotros</a>
+           <a href="anuncios.html"> Anuncios</a>
+           <a href="blog.html"> Blog</a>
+           <a href="contacto.html"> Contacto</a>
+           </nav>
+         </div>
+       <h1>venta de casas y departamentos exclusivos de lujo</h1>
+     </div>
     </header>
 
   <section>
@@ -23,7 +28,7 @@
 
     <div class="">
         <img src="img/icono1.svg" alt="icono seg">
-        <h3>seguridad</h3>
+        <h3 class="encabesado">seguridad</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
           veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -32,7 +37,7 @@
 
     <div class="">
       <img src="img/icono2.svg" alt="icono mejor precio">
-      <h3>El mejor precio</h3>
+      <h3 class="encabesado">El mejor precio</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -41,7 +46,7 @@
 
     <div class="">
       <img src="img/icono3.svg" alt="icono a tiempo">
-      <h3>A tiempo</h3>
+      <h3 class="encabesado">A tiempo</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -119,7 +124,7 @@
   </section>
 
 <footer>
-  <nav>
+  <nav class="navegacion">
    <a href="nosotros.html"> Nosotros</a>
    <a href="anuncios.html"> Anuncios</a>
    <a href="blog.html"> Blog</a>
