--- a/projecto_1/index.html
+++ b/projecto_1/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Bienes raices NMG</title>
+    <!-- orden matters remember rules applying css -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
+    <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <header class="site-header inicio">
-      <div class="contenedor">
+      <div class="contenedor contenido-header">
         <div class="barra">
           <a href="nosotros.html"><!-- logo with link -->
             <img src="img/logo.svg" alt="logotipo br">
@@ -19,7 +22,7 @@
            <a href="contacto.html"> Contacto</a>
            </nav>
          </div>
-       <h1>venta de casas y departamentos exclusivos de lujo</h1>
+       <h1>venta de casas y <br> departamentos exclusivos de lujo</h1>
      </div>
     </header>
 
