--- a/projecto_1/index.html
+++ b/projecto_1/index.html
@@ -26,34 +26,35 @@
      </div>
     </header>
 
-  <section>
-    <h2>Mas sobre nosostros</h2>
+  <section class="contenedor section">
+    <h2 class="fw-300 centrar-texto">Mas sobre nosostros</h2>
+    <div class="iconos-nosotros">
+        <div class="icono">
+            <img src="img/icono1.svg" alt="icono seg">
+            <h3 class="encabesado">seguridad</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo consequat. </p>
+        </div>
 
-    <div class="">
-        <img src="img/icono1.svg" alt="icono seg">
-        <h3 class="encabesado">seguridad</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. </p>
-    </div>
+        <div class="icono">
+          <img src="img/icono2.svg" alt="icono mejor precio">
+          <h3 class="encabesado">El mejor precio</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. </p>
+        </div>
 
-    <div class="">
-      <img src="img/icono2.svg" alt="icono mejor precio">
-      <h3 class="encabesado">El mejor precio</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. </p>
-    </div>
-
-    <div class="">
-      <img src="img/icono3.svg" alt="icono a tiempo">
-      <h3 class="encabesado">A tiempo</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. </p>
+        <div class="icono">
+          <img src="img/icono3.svg" alt="icono a tiempo">
+          <h3 class="encabesado">A tiempo</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. </p>
+        </div>
     </div>
 
   </section>
