--- a/projecto_1/index.html
+++ b/projecto_1/index.html
@@ -59,31 +59,40 @@
 
   </section>
 
-  <main><!-- contenido principal de la pagina solo un main por pagina -->
-    <h2>Casas ydepas en venta</h2>
+  <main class="section contenedor"><!-- contenido principal de la pagina solo un main por pagina -->
+    <h2 class="fw-300 centrar-texto">Casas y depas en venta</h2>
+    <div class="contenedor-anuncios">
+        <div class="anuncio">
+          <img src="img/anuncio1.jpg" alt="anuncio casa en lago">
+              <div class="contenido-anuncio">
+                  <h3>casa de lujo en el lago</h3>
+                  <p>casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
+                  <p class="precio">$3.000.000</p>
+                  <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+              </div>
+        </div>
+        <div class="anuncio">
+          <img src="img/anuncio2.jpg" alt="anuncio casa de lujo">
+          <div class="contenido-anuncio">
+              <h3>casa termiandos de lujo</h3>
+              <p>casa con diseño moderno, TIC </p>
+              <p class="precio">$2.000.000</p>
+              <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+          </div>              
+        </div>
 
-    <div class="">
-      <img src="img/anuncio1.jpg" alt="anuncio casa en lago">
-      <h3>casa de lujo en el lago</h3>
-      <p>casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
-      <p>$3.000.000</p>
-      <a href="#">Ver propiedad</a>
+        <div class="anuncio">
+          <img src="img/anuncio3.jpg" alt="anuncio casa con piscina">
+          <div class="contenido-anuncio">
+              <h3>casa con piscina</h3>
+              <p>casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
+              <p class="precio">$3.000.000</p>
+              <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+          </div>
+        </div>
     </div>
-
-    <div class="">
-      <img src="img/anuncio2.jpg" alt="anuncio casa de lujo">
-      <h3>casa termiandos de lujo</h3>
-      <p>casa con diseño moderno, TIC </p>
-      <p>$2.000.000</p>
-      <a href="#">Ver propiedad</a>
-    </div>
-
-    <div class="">
-      <img src="img/anuncio3.jpg" alt="anuncio casa con piscina">
-      <h3>casa con piscina</h3>
-      <p>casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
-      <p>$3.000.000</p>
-      <a href="#">Ver propiedad</a>
+    <div class="ver-todas">
+        <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
     </div>
   </main>
 
