--- a/projecto_1/index.html
+++ b/projecto_1/index.html
@@ -68,6 +68,22 @@
                   <h3>casa de lujo en el lago</h3>
                   <p>casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
                   <p class="precio">$3.000.000</p>
+                  
+                  <ul class="iconos-caracteristicas">
+                      <li>
+                          <img src="img/icono_wc.svg" alt="icono wc">
+                          <p>3</p>
+                      </li>
+                      <li>
+                          <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                          <p>3</p>
+                      </li>
+                      <li>
+                          <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                          <p>4</p>
+                      </li>
+                  </ul>
+                  
                   <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
               </div>
         </div>
@@ -77,6 +93,20 @@
               <h3>casa termiandos de lujo</h3>
               <p>casa con diseño moderno, TIC </p>
               <p class="precio">$2.000.000</p>
+              <ul class="iconos-caracteristicas">
+                      <li>
+                          <img src="img/icono_wc.svg" alt="icono wc">
+                          <p>3</p>
+                      </li>
+                      <li>
+                          <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                          <p>3</p>
+                      </li>
+                      <li>
+                          <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                          <p>4</p>
+                      </li>
+                  </ul>
               <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
           </div>              
         </div>
@@ -87,6 +117,20 @@
               <h3>casa con piscina</h3>
               <p>casa en el lago con excelente vista, acabados de lujo a un excelente precio </p>
               <p class="precio">$3.000.000</p>
+              <ul class="iconos-caracteristicas">
+                      <li>
+                          <img src="img/icono_wc.svg" alt="icono wc">
+                          <p>3</p>
+                      </li>
+                      <li>
+                          <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                          <p>3</p>
+                      </li>
+                      <li>
+                          <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                          <p>4</p>
+                      </li>
+                  </ul>
               <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
           </div>
         </div>
@@ -96,14 +140,16 @@
     </div>
   </main>
 
-<section>
+<section class="imagen-contacto">
+ <div class="contenedor contenido-contacto">
   <h2>Encuentra la casa de tus sueños</h2>
   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
     doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
     veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
     ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
     consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-    <a href="contacto.html">Contactanos</a>
+    <a href="contacto.html" class="boton boton-amarillo">Contactanos</a>   
+ </div>
 </section>
 
 
