--- a/projecto_1/index.html
+++ b/projecto_1/index.html
@@ -160,7 +160,7 @@
               <img src="img/blog1.jpg" alt="entrada de blog">               
            </div>
             <div class="texto-entrada">
-               <a href="#">
+               <a href="entrada.html">
                    <h4>terraza en el techi de tu casa</h4>
                </a>
                 <p>secrito el <span> 20/10/2019</span> por <span>Admin </span> </p>
@@ -175,7 +175,7 @@
                <img src="img/blog2.jpg" alt="entrada de blog">
            </div>
             <div class="texto-entrada">
-               <a href="#">
+               <a href="entrada.html">
                    <h4>guia para la decoracion</h4>
                </a>
                 <p>secrito el <span> 20/10/2019</span> por <span>Admin </span> </p>
